# multiDrone-ROS

./: README.md
multiDrone-ROS/px4ros/: CMakeLists.txt  CMakeLists.txt~  package.xml
multiDrone-ROS/px4ros/scripts/: follower_control_decode.py  follower_control_decode.py~  leader_control_decode.py~  leader_controller.py~  main_control.py  main_control.py~  serial_ros.py  serial_ros.py~
multiDrone-ROS/px4ros/src/: px4_getpoint_node.cpp  px4_getpoint_node.cpp~  px4_getpoint_node_bp.cpp
multiDrone-ROS/spiri_go/: CMakeLists.txt  README.md  package.xml  setup.py
multiDrone-ROS/spiri_go/action/: LandHere.action  Takeoff.action
multiDrone-ROS/spiri_go/include/: spiri_data_classes.h  spiri_go.h  spiri_go.h~
multiDrone-ROS/spiri_go/initialize/: apm_sim
multiDrone-ROS/spiri_go/launch/: collision_avoidance.launch  jetson.launch  kbteleop.launch  leader-sitl.launch~  leader.launch~  sitl.launch  spiri_go.launch  takeoff_and_land.launch  takeoff_and_land.launch~
multiDrone-ROS/spiri_go/scripts/: mavkbteleop.py
multiDrone-ROS/spiri_go/spiripy/: api.py  spiri_except.py
multiDrone-ROS/spiri_go/src/: arm_and_takeoff.cpp~  collision_avoidance.cpp  collision_avoidance.cpp~  follower.cpp  follower.cpp~  leader.cpp  leader_control.cpp~  leader_go.cpp~  read me.txt~  spiri_data_classes.cpp  spiri_go.cpp  spiri_go_client.cpp~  takeoff_and_land.cpp  takeoff_and_land.cpp~
multiDrone-ROS/spiri_go/src/test/: spiri_go_test.cpp  test_com.cpp
multiDrone-ROS/spiri_go/srv/: LastState.srv  LocalPosition.srv
multiDrone-ROS/spiri_go/test/: api.py  sim.py  sitl.test
